--- a/vite-reduxtoolkit-101/hearstone/package.json
+++ b/vite-reduxtoolkit-101/hearstone/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.3",
     "vite": "^5.4.1"
   }
 }
